# PartyBuilding

./: .gitignore  README.md  pyproject.toml  run.sh  test_stream.html  test_stream_final.html
frontend/: README.md  agent-templates.html  index.html  script.js  styles.css
frontend/assets/css/: main.css
frontend/assets/css/components/: agents.css  features.css  footer.css  header.css  modal.css  music-player.css  usage.css
frontend/assets/css/utils/: animations.css  variables.css
frontend/assets/js/: main.js
frontend/assets/js/modules/: AgentServices.js  ComponentLoader.js  Formatter.js  LoadingManager.js  ModalManager.js
frontend/assets/js/utils/: constants.js  helpers.js
frontend/components/: agents-showcase.html  features.html  footer.html  header.html  intro-section.html  modal.html  usage-section.html
src/: main.py
src/agent/: activity_design.py  music_agent.py  policy_qa.py  prompt.py
src/conf/: env.py
src/model/: activity.py  music.py  policy.py
src/utils/: constant.py  ve.py
src/utils/ve_music/: GenSongDemo.py  Sign.py
